added session tester
